out.txt
g++ graph.cpp verifier.cpp rds.cpp main.cpp -O2 -lm -o rds -Wall -std=c++14
In file included from verifier.cpp:1:0:
rds.h:8:22: error: declaration of ‘typedef unsigned int defective_clique::uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
In file included from rds.h:6:0,
                 from verifier.cpp:1:
verifier.h:8:22: error: changes meaning of ‘uint’ from ‘typedef unsigned int uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
In file included from verifier.cpp:1:0:
rds.h:10:55: error: expected ‘}’ at end of input
 uint rds(verifier* v, graph*g, std::vector<uint>& res);
                                                       ^
In file included from rds.h:6:0,
                 from verifier.cpp:1:
verifier.h: In member function ‘virtual void* defective_clique::prepare_aux(graph*, const std::vector<unsigned int>&, uint, const std::vector<unsigned int>&, void*)’:
verifier.h:109:28: error: a function-definition is not allowed here before ‘{’ token
   void free_aux(void* aux) { t_aux* i = static_cast<t_aux*>(aux); delete i; }
                            ^
verifier.h: At global scope:
verifier.h:110:1: error: expected unqualified-id at end of input
 };
 ^
In file included from rds.cpp:1:0:
rds.h:8:22: error: declaration of ‘typedef unsigned int defective_clique::uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
In file included from rds.h:6:0,
                 from rds.cpp:1:
verifier.h:8:22: error: changes meaning of ‘uint’ from ‘typedef unsigned int uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
In file included from /usr/include/c++/4.9/bits/stl_algo.h:60:0,
                 from /usr/include/c++/4.9/algorithm:62,
                 from rds.cpp:3:
/usr/include/c++/4.9/bits/algorithmfwd.h:42:1: error: expected unqualified-id before ‘namespace’
 namespace std _GLIBCXX_VISIBILITY(default)
 ^
In file included from /usr/include/c++/4.9/bits/stl_algo.h:61:0,
                 from /usr/include/c++/4.9/algorithm:62,
                 from rds.cpp:3:
/usr/include/c++/4.9/bits/stl_heap.h:62:1: error: expected unqualified-id before ‘namespace’
 namespace std _GLIBCXX_VISIBILITY(default)
 ^
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.9/include/x86intrin.h:27:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.9/bits/opt_random.h:33,
                 from /usr/include/c++/4.9/random:50,
                 from /usr/include/c++/4.9/bits/stl_algo.h:66,
                 from /usr/include/c++/4.9/algorithm:62,
                 from rds.cpp:3:
/usr/lib/gcc/x86_64-linux-gnu/4.9/include/ia32intrin.h:53:25: error: expected ‘}’ before end of line
 #pragma GCC push_options
                         ^
In file included from rds.h:6:0,
                 from rds.cpp:1:
verifier.h: In member function ‘virtual void* defective_clique::prepare_aux(graph*, const std::vector<unsigned int>&, uint, const std::vector<unsigned int>&, void*)’:
verifier.h:109:28: error: a function-definition is not allowed here before ‘{’ token
   void free_aux(void* aux) { t_aux* i = static_cast<t_aux*>(aux); delete i; }
                            ^
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.9/include/x86intrin.h:27:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.9/bits/opt_random.h:33,
                 from /usr/include/c++/4.9/random:50,
                 from /usr/include/c++/4.9/bits/stl_algo.h:66,
                 from /usr/include/c++/4.9/algorithm:62,
                 from rds.cpp:3:
/usr/lib/gcc/x86_64-linux-gnu/4.9/include/ia32intrin.h: At global scope:
/usr/lib/gcc/x86_64-linux-gnu/4.9/include/ia32intrin.h:53:25: error: expected unqualified-id before end of line
 #pragma GCC push_options
                         ^
/usr/lib/gcc/x86_64-linux-gnu/4.9/include/ia32intrin.h:53:25: error: expected declaration before end of line
In file included from main.cpp:4:0:
rds.h:8:22: error: declaration of ‘typedef unsigned int defective_clique::uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
In file included from rds.h:6:0,
                 from main.cpp:4:
verifier.h:8:22: error: changes meaning of ‘uint’ from ‘typedef unsigned int uint’ [-fpermissive]
 typedef unsigned int uint;
                      ^
main.cpp:8:7: error: expected nested-name-specifier before ‘namespace’
 using namespace std;
       ^
main.cpp:70:1: error: expected ‘}’ at end of input
 }
 ^
In file included from rds.h:6:0,
                 from main.cpp:4:
verifier.h: In member function ‘virtual void* defective_clique::prepare_aux(graph*, const std::vector<unsigned int>&, uint, const std::vector<unsigned int>&, void*)’:
verifier.h:109:28: error: a function-definition is not allowed here before ‘{’ token
   void free_aux(void* aux) { t_aux* i = static_cast<t_aux*>(aux); delete i; }
                            ^
main.cpp: In member function ‘int defective_clique::main(int, char**)’:
main.cpp:25:3: error: ‘vector’ was not declared in this scope
   vector<uint> r;
   ^
main.cpp:25:3: note: suggested alternative:
In file included from /usr/include/c++/4.9/vector:64:0,
                 from /usr/include/c++/4.9/bits/random.h:34,
                 from /usr/include/c++/4.9/random:49,
                 from /usr/include/c++/4.9/bits/stl_algo.h:66,
                 from /usr/include/c++/4.9/algorithm:62,
                 from main.cpp:3:
/usr/include/c++/4.9/bits/stl_vector.h:214:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
main.cpp:25:14: error: expected primary-expression before ‘>’ token
   vector<uint> r;
              ^
main.cpp:25:16: error: ‘r’ was not declared in this scope
   vector<uint> r;
                ^
main.cpp:57:5: error: ‘vector’ was not declared in this scope
     vector<uint> res_p;
     ^
main.cpp:57:5: note: suggested alternative:
In file included from /usr/include/c++/4.9/vector:64:0,
                 from /usr/include/c++/4.9/bits/random.h:34,
                 from /usr/include/c++/4.9/random:49,
                 from /usr/include/c++/4.9/bits/stl_algo.h:66,
                 from /usr/include/c++/4.9/algorithm:62,
                 from main.cpp:3:
/usr/include/c++/4.9/bits/stl_vector.h:214:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
main.cpp:57:16: error: expected primary-expression before ‘>’ token
     vector<uint> res_p;
                ^
main.cpp:57:18: error: ‘res_p’ was not declared in this scope
     vector<uint> res_p;
                  ^
main.cpp:60:36: error: ‘sort’ was not declared in this scope
     sort(res_p.begin(), res_p.end());
                                    ^
main.cpp:60:36: note: suggested alternative:
In file included from /usr/include/c++/4.9/algorithm:62:0,
                 from main.cpp:3:
/usr/include/c++/4.9/bits/stl_algo.h:4705:5: note:   ‘std::sort’
     sort(_RandomAccessIterator __first, _RandomAccessIterator __last,
     ^
main.cpp: At global scope:
main.cpp:70:1: error: expected unqualified-id at end of input
 }
 ^
Makefile:2: recipe for target 'all' failed
make: *** [all] Error 1
